--- a/Extensions.targets
+++ b/Extensions.targets
@@ -1,10 +1,5 @@
 <Project>
 
-  <PropertyGroup>
-    <IsCI>false</IsCI>
-    <IsCI Condition=" '$(ARCADE_BUILD_TOOL_COMMAND)' != '' ">true</IsCI>
-  </PropertyGroup>
-
   <!-- Publish the extension and collect its output -->
   <Target Name="ComputePublishOutput" DependsOnTargets="Build;ComputeFilesToPublish" Returns="@(ExtensionFiles)">
     <ItemGroup>
@@ -23,9 +18,9 @@
       </Extension>
     </ItemGroup>
 
-    <ItemGroup Condition="$(IsCI)">
+    <!-- Outside of VS, we want to set a new intermediate path to prevent race conditions of multiple writes to the output -->
+    <ItemGroup Condition="!$(BuildingInsideVisualStudio)">
       <Extension Update="@(Extension)">
-        <!-- We want to set a new intermediate path to prevent race conditions of multiple writes to the output -->
         <Properties>%(Properties);$(BaseIntermediateOutputPath)\extensions\%(Name)\</Properties>
       </Extension>
     </ItemGroup>
