--- a/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/Properties/launchSettings.json
+++ b/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/Properties/launchSettings.json
@@ -4,8 +4,8 @@
       "commandName": "Project",
       "commandLineArgs1": "upgrade C:\\code\\upgradethings\\TestAREA\\EwDavidForms\\EwDavidForms\\EwDavidForms.iOS\\EwDavidForms.iOS.csproj",
       "commandLineArgs2": "upgrade C:\\code\\upgradethings\\TestAREA\\EwDavidForms\\EwDavidForms\\EwDavidForms.Android\\EwDavidForms.Android.csproj",
-      "commandLineArgs3": "upgrade C:\\code\\upgradethings\\TestAREA\\EwDavidForms\\EwDavidForms.sln",
-      "commandLineArgs": "upgrade C:\\code\\upgradethings\\TestAREA\\EwDavidForms\\EwDavidForms\\EwDavidForms\\EwDavidForms.csproj",
+      "commandLineArgs": "upgrade C:\\code\\upgradethings\\TestAREA\\EwDavidForms\\EwDavidForms.sln",
+      "commandLineArgs4": "upgrade C:\\code\\upgradethings\\TestAREA\\EwDavidForms\\EwDavidForms\\EwDavidForms\\EwDavidForms.csproj",
       "environmentVariables": {
         "DOTNET_ENVIRONMENT": "Development"
       }
