--- a/tests/extensions/default/Microsoft.DotNet.UpgradeAssistant.Steps.Backup.Tests/Microsoft.DotNet.UpgradeAssistant.Steps.Backup.Tests.csproj
+++ b/tests/extensions/default/Microsoft.DotNet.UpgradeAssistant.Steps.Backup.Tests/Microsoft.DotNet.UpgradeAssistant.Steps.Backup.Tests.csproj
@@ -17,7 +17,7 @@
     <None Remove="TestAssets\B\Project1\B.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\extensions\default\Microsoft.DotNet.UpgradeAssistant.Steps.Backup\Microsoft.DotNet.UpgradeAssistant.Steps.Backup.csproj" />
-    <ProjectReference Include="..\..\Microsoft.DotNet.UpgradeAssistant.TestHelpers\Microsoft.DotNet.UpgradeAssistant.TestHelpers.csproj" />
+    <ProjectReference Include="..\..\..\..\src\extensions\default\Microsoft.DotNet.UpgradeAssistant.Steps.Backup\Microsoft.DotNet.UpgradeAssistant.Steps.Backup.csproj" />
+    <ProjectReference Include="..\..\..\Microsoft.DotNet.UpgradeAssistant.TestHelpers\Microsoft.DotNet.UpgradeAssistant.TestHelpers.csproj" />
   </ItemGroup>
 </Project>
